--- a/webveiw-test-website/popup.html
+++ b/webveiw-test-website/popup.html
@@ -6,6 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <style>
+        button {
+            font-size: 1rem;
+        }
+        div {
+            line-height: 40px;
+        }
+    </style>
+
     <script>
         function closeWin() {
             window.close();
@@ -18,6 +27,9 @@
     <h1>팝업 창입니다.</h1>
     <div>
         <button onclick="closeWin()">close</button>
+    </div>
+    <div>
+        <input type="file">
     </div>
     
 </body>
